--- a/packages/clay-css/src/scss/variables/_buttons.scss
+++ b/packages/clay-css/src/scss/variables/_buttons.scss
@@ -188,7 +188,7 @@ $btn-sm: map-deep-merge(
 // Button Monospaced
 
 $btn-monospaced-padding-x: 0 !default;
-$btn-monospaced-padding-y: 0.1875rem !default; // 3px
+$btn-monospaced-padding-y: 0 !default;
 $btn-monospaced-size: 2.375rem !default; // 38px
 
 $btn-monospaced-size-mobile: null !default;
@@ -196,7 +196,11 @@ $btn-monospaced-size-mobile: null !default;
 $btn-monospaced: () !default;
 $btn-monospaced: map-deep-merge(
 	(
+		align-items: center,
+		display: inline-flex,
+		flex-direction: column,
 		height: $btn-monospaced-size,
+		justify-content: center,
 		line-height: 1,
 		overflow: hidden,
 		padding-bottom: $btn-monospaced-padding-y,
@@ -215,7 +219,7 @@ $btn-monospaced: map-deep-merge(
 			align-items: center,
 			display: flex,
 			flex-direction: column,
-			height: calc(100% + #{$btn-monospaced-padding-y * 2}),
+			height: 100%,
 			justify-content: center,
 			padding: 0,
 			width: 100%,
@@ -226,8 +230,8 @@ $btn-monospaced: map-deep-merge(
 
 // Button Monospaced Lg
 
-$btn-monospaced-padding-x-lg: 0 !default;
-$btn-monospaced-padding-y-lg: 0.3125rem !default; // 5px
+$btn-monospaced-padding-x-lg: null !default;
+$btn-monospaced-padding-y-lg: null !default;
 $btn-monospaced-size-lg: 3rem !default; // 48px
 
 $btn-monospaced-size-lg-mobile: null !default;
@@ -245,17 +249,14 @@ $btn-monospaced-lg: map-deep-merge(
 			height: $btn-monospaced-size-lg-mobile,
 			width: $btn-monospaced-size-lg-mobile,
 		),
-		c-inner: (
-			height: calc(100% + #{$btn-monospaced-padding-y-lg * 2}),
-		),
 	),
 	$btn-monospaced-lg
 );
 
 // Button Monospaced Sm
 
-$btn-monospaced-padding-x-sm: 0 !default;
-$btn-monospaced-padding-y-sm: 0.125rem !default; // 2px
+$btn-monospaced-padding-x-sm: null !default;
+$btn-monospaced-padding-y-sm: null !default;
 $btn-monospaced-size-sm: 1.9375rem !default; // 31px
 
 $btn-monospaced-size-sm-mobile: null !default;
@@ -272,9 +273,6 @@ $btn-monospaced-sm: map-deep-merge(
 		mobile: (
 			height: $btn-monospaced-size-sm-mobile,
 			width: $btn-monospaced-size-sm-mobile,
-		),
-		c-inner: (
-			height: calc(100% + #{$btn-monospaced-padding-y-sm * 2}),
 		),
 	),
 	$btn-monospaced-sm
